fixing footer overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ section {
 }
 
 footer {
+  overflow-x: hidden;
   position: absolute;
   bottom: 0;
   width: 100%;
